@@ -190,6 +190,7 @@ enum {
 
 enum {
 	UNIT_ID_EURO = 510,
+	UNIT_ID_BYN = 515,
 	UNIT_ID_BTC = 520,
 	UNIT_ID_SECOND = 550,
 	UNIT_ID_MINUTE = 551,
